Initialize PKL VmLanguageProvider at build time